data/src/test/resources/com/linkedin/data/schema/annotation/denormalizedsource/invalid/3_5_cyclic_from_include.pdl
namespace com.linkedin.data.schema.annotation.denormalizedsource.invalid

@customAnnotation={
  "/f1/f2": "thisWouldCauseCycle"
}
record A includes record innerRcd {
  f1: A
}
{
  f2:string
}
